# trlx

./: .gitignore  README.md  setup.cfg
.github/workflows/: code_quality.yml
configs/: neox_ppo_config.yml  neox_ppo_model_config.yml  ppo_test.yml  test_config.yml
examples/: neox_ppo_sentiment.py  ppo_sentiments_llama.py  ppo_sentiments_t5.py  ppo_test.py
examples/multinode/: benchmark.py  slurm_ddp.sh  slurm_ddp_start.sh  slurm_ds.sh
examples/multinode/configs/: ppo_ddp.yml  ppo_deepspeed.yml
examples/multinode/configs/accelerate/: ddp_multinode.yml  deepspeed_multinode.yml
examples/randomwalks/: ppo_randomwalks.py
examples/summarize_daily_cnn/: t5_summarize_daily_cnn.py
tests/: test_neox.py  test_trainers.py
trlx/: trlx.py
trlx/data/: configs.py  default_configs.py
trlx/model/: accelerate_base_model.py  accelerate_ppo_model.py  neox_ppo_model.py
trlx/model/nn/: neox_models.py  ppo_models.py
trlx/orchestrator/: neox_ppo_orchestrator.py
trlx/ray_tune/: wandb.py
trlx/trainer/: accelerate_ilql_trainer.py
trlx/trainer/nn/: ilql_models.py
trlx/utils/: loading.py  megatron.py  modeling.py
