[metadata]
name = trlx
author = CarperAI
version = 0.3.1
url = https://github.com/CarperAI/trlx
download_url = https://github.com/CarperAI/trlx/tags
description = A framework for distributed training of language models with Reinforcement Learning via Human Feedback (RLHF)
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    deep learning
    reinforcement learning
    language modeling
license = MIT
classifier = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires =
    accelerate>=0.12.0
    datasets
    deepspeed>=0.7.3
    einops>=0.4.1
    numpy>=1.23.2
    torchtyping
    transformers>=4.21.2
    tqdm
    wandb
    ray>=2.0.1
    tabulate>=0.9.0
    networkx

[options.extras_require]
dev =
    black
    isort
    flake8
    pre-commit
    pytest
    pytest-cov

[options.packages.find]
exclude =
    configs*
    docs*
    examples*
    tests*
